project/stage/semantic_tests/accept/funcs_w_var_decls.ul
void main() {
    int c;
}

int sum(int a, int b) {
    int sum;
    return 0001;
}

int mult(int a, int b) {
    int result;
    return 1;
}
