project/stage/semantic_tests/reject/nested_arr_expr.ul
void main() {
    int [1] arr;
    boolean [1] barr;

    print 1 + barr[ arr[ arr[ arr[0] ] ] ];
}
